# crosspoint-inkhoard

./: platformio.ini
.github/workflows/: ci.yml  inkhoard-ci.yml
docs/: epub-toc-navigation.md  file-formats.md  theme-creation.md
docs/inkhoard/: FORK.md  HARDWARE.md
lib/EpdFont/: EpdFont.cpp  EpdFont.h  EpdFontFamily.cpp  EpdFontFamily.h  SdCardFont.cpp  SdCardFont.h
lib/Epub/: Epub.cpp  Epub.h
lib/Epub/Epub/: Page.cpp  Section.cpp  Section.h
lib/GfxRenderer/: GfxRenderer.cpp  GfxRenderer.h
lib/I18n/translations/: belarusian.yaml  catalan.yaml  czech.yaml  danish.yaml  dutch.yaml  english.yaml  finnish.yaml  french.yaml  german.yaml  hebrew.yaml  hungarian.yaml  italian.yaml  kazakh.yaml  lithuanian.yaml  polish.yaml  portuguese.yaml  romanian.yaml  russian.yaml  slovak.yaml  slovenian.yaml  spanish.yaml  swedish.yaml  turkish.yaml  ukrainian.yaml  valencian.yaml  vietnamese.yaml
lib/InkHoard/: InkHoardClient.cpp  InkHoardClient.h  InkHoardConnectionTest.cpp  InkHoardConnectionTest.h  InkHoardCredentialLogic.cpp  InkHoardCredentialLogic.h  InkHoardCredentialStore.cpp  InkHoardCredentialStore.h  InkHoardDownloadPaths.cpp  InkHoardDownloadPaths.h  InkHoardEspTransport.cpp  InkHoardEspTransport.h  InkHoardJsonParser.cpp  InkHoardJsonParser.h  InkHoardModels.cpp  InkHoardModels.h  InkHoardTransport.cpp  InkHoardTransport.h  InkHoardUiLogic.h
lib/JsonParser/: StreamingJsonParser.h
lib/KOReaderSync/: ChapterXPathResolver.cpp
lib/OpdsParser/: OpdsParser.h
lib/XmlParserUtils/: XmlParserUtils.h
lib/hal/: HalClock.cpp  HalDisplay.h  HalGPIO.cpp  HalGPIO.h  HalPowerManager.cpp
src/: BleInput.h  BookmarkEntry.h  CrossPointSettings.cpp  CrossPointSettings.h  JsonSettingsIO.cpp  MappedInputManager.cpp  MappedInputManager.h  SettingsList.h  WifiCredentialStore.h  main.cpp
src/activities/: Activity.cpp  Activity.h  ActivityManager.cpp  ActivityManager.h  ActivityResult.h
src/activities/browser/: OpdsBookBrowserActivity.cpp
src/activities/home/: FileBrowserActivity.cpp  HomeActivity.cpp  HomeActivity.h
src/activities/inkhoard/: InkHoardItemActivity.cpp  InkHoardItemActivity.h  InkHoardLibraryActivity.cpp  InkHoardLibraryActivity.h
src/activities/network/: WifiSelectionActivity.h
src/activities/reader/: BookPaginator.cpp  BookPaginator.h  CpFontAdapter.cpp  CpFontAdapter.h  EpubReaderActivity.cpp  EpubReaderActivity.h  EpubReaderBookmarksActivity.cpp  EpubReaderBookmarksActivity.h  EpubReaderChapterSelectionActivity.cpp  EpubReaderChapterSelectionActivity.h  EpubReaderMenuActivity.cpp  EpubReaderMenuActivity.h  EpubReaderPercentSelectionActivity.cpp  EpubReaderUtils.h  FreeInkBookStorage.h  FreeInkPageRenderer.cpp  FreeInkPageRenderer.h  KOReaderSyncActivity.cpp  ReaderActivity.cpp  ReaderActivity.h  ReaderUtils.h  TxtReaderActivity.cpp  TxtReaderActivity.h  XtcReaderActivity.cpp  XtcReaderActivity.h
src/activities/settings/: BluetoothSettingsActivity.cpp  (+11 more)
src/components/: OptionPopup.h  UITheme.cpp
src/inkhoard/: InkHoardClientEpub.cpp  InkHoardDownloadManager.cpp  InkHoardDownloadManager.h
src/network/: CrossPointWebServer.cpp  CrossPointWebServer.h  HttpDownloader.cpp  HttpDownloader.h
src/util/: BookCoverUtils.cpp  BookCoverUtils.h  UrlUtils.cpp
test/: CMakeLists.txt
test/cpfont_adapter/: CMakeLists.txt  CpFontAdapterTest.cpp  SdCardFontStubs.cpp
test/inkhoard_client/: CMakeLists.txt  InkHoardClientTest.cpp
test/inkhoard_credential_logic/: CMakeLists.txt  InkHoardCredentialLogicTest.cpp
test/inkhoard_download_paths/: CMakeLists.txt  InkHoardDownloadPathsTest.cpp
test/inkhoard_json_parser/: CMakeLists.txt  InkHoardJsonParserTest.cpp
(+33 files in other folders)
